--- a/StringSearcher/StringSearcher/StringSearcher.csproj
+++ b/StringSearcher/StringSearcher/StringSearcher.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="KnuthMorrisPrattSearcher.cs" />
     <Compile Include="NaiveSearcher.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
