--- a/StringSearcher/StringSearcher/StringSearcher.csproj
+++ b/StringSearcher/StringSearcher/StringSearcher.csproj
@@ -52,10 +52,13 @@
     </Compile>
     <Compile Include="KnuthMorrisPrattSearcher.cs" />
     <Compile Include="NaiveSearcher.cs" />
+    <Compile Include="NaiveSearcherSimulator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RabinKarpSearcher.cs" />
+    <Compile Include="RabinKarpSearcherSimulator.cs" />
     <Compile Include="Searcher.cs" />
+    <Compile Include="Simulator.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
