Knuth-Morris-Pratt Simulator Added
Form not functioning proprely

--- a/StringSearcher/StringSearcher/StringSearcher.csproj
+++ b/StringSearcher/StringSearcher/StringSearcher.csproj
@@ -51,6 +51,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="KnuthMorrisPrattSearcher.cs" />
+    <Compile Include="KnuthMorrisPrattSimulator.cs" />
     <Compile Include="NaiveSearcher.cs" />
     <Compile Include="NaiveSearcherSimulator.cs" />
     <Compile Include="Program.cs" />
